// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should match snapshot when HIGHTLIGHT false 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card  "
        data-test=""
      >
        <div
          class="card-content"
        >
          <div
            class="media"
          >
            <div
              class="media-content"
            >
              <h5
                class="card-heading"
              >
                mockHeading
              </h5>
              <h6
                class="text-ellipsis-5 card-sub-heading"
              />
              <h6
                class="card-sub-heading-additional"
              />
            </div>
          </div>
          <div
            class="card-body-wrap"
          >
            <div>
              City
            </div>
            <div>
              Country
            </div>
            <div>
              PostalCode
            </div>
            <div>
              contactPerson
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card  "
      data-test=""
    >
      <div
        class="card-content"
      >
        <div
          class="media"
        >
          <div
            class="media-content"
          >
            <h5
              class="card-heading"
            >
              mockHeading
            </h5>
            <h6
              class="text-ellipsis-5 card-sub-heading"
            />
            <h6
              class="card-sub-heading-additional"
            />
          </div>
        </div>
        <div
          class="card-body-wrap"
        >
          <div>
            City
          </div>
          <div>
            Country
          </div>
          <div>
            PostalCode
          </div>
          <div>
            contactPerson
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tile should match snapshot when HIGHTLIGHT true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card hightlight "
        data-test=""
      >
        <div
          class="card-content"
        >
          <div
            class="media"
          >
            <div
              class="media-content"
            >
              <h5
                class="card-heading"
              >
                mockHeading
              </h5>
              <h6
                class="text-ellipsis-5 card-sub-heading"
              />
              <h6
                class="card-sub-heading-additional"
              />
            </div>
          </div>
          <div
            class="card-body-wrap"
          >
            <div>
              City
            </div>
            <div>
              Country
            </div>
            <div>
              PostalCode
            </div>
            <div>
              contactPerson
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card hightlight "
      data-test=""
    >
      <div
        class="card-content"
      >
        <div
          class="media"
        >
          <div
            class="media-content"
          >
            <h5
              class="card-heading"
            >
              mockHeading
            </h5>
            <h6
              class="text-ellipsis-5 card-sub-heading"
            />
            <h6
              class="card-sub-heading-additional"
            />
          </div>
        </div>
        <div
          class="card-body-wrap"
        >
          <div>
            City
          </div>
          <div>
            Country
          </div>
          <div>
            PostalCode
          </div>
          <div>
            contactPerson
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
